# Environmental-Insights

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  air_pollution_functions.py  data.py  development.ipynb  download.py  meta.yaml  models.py  package_installation.ipynb  pyproject.toml  requirements.txt  test_workbook.ipynb  tutorial.ipynb  tutorial_1.ipynb  tutorial_environmental_insights.ipynb  variables.py
.github/workflows/: lint.yml  python-test.yml  testing.yml
.ipynb_checkpoints/: README-checkpoint.md  data-checkpoint.py  download-checkpoint.py  models-checkpoint.py  tutorial-checkpoint.ipynb  tutorial_environmental_insights-checkpoint.ipynb
Documentation/: air_pollution_functions.html  data.html  models.html
Documentation/.ipynb_checkpoints/: air_pollution_functions-checkpoint.html  data-checkpoint.html  models-checkpoint.html
environmental_insights/: __init__.py  air_pollution_functions.py  data.py  download.py  models.py  tutorial_environmental_insights.ipynb  variables.py
environmental_insights/environmental_insights.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
temp_downloads/: ABD1_2015.RData  ABD1_2015.csv  ABD_2015.RData  ABD_2015.csv  ANG5_2010.RData  ANG5_2010.csv  DCSMOB01_2019.RData  DCSMOB01_2019.csv  YK9_2015.RData  YK9_2015.csv  aqe_metadata.RData  aqe_metadata.csv  aurn_metadata.RData  aurn_metadata.csv  ni_metadata.RData  ni_metadata.csv  saqn_metadata.RData  saqn_metadata.csv  waqn_metadata.RData  waqn_metadata.csv
tests/: test_air_pollution_functions.py  test_data.py  test_models.py  tests_air_pollution_functions.py  tests_data.py
tests/.ipynb_checkpoints/: tests_models-checkpoint.py
tests/integration/: test_end_to_end_workflow.py
tests/test_data/: small_test.nc
tests/unit/: test_air_pollution_functions.py  test_data.py  test_models.py
