[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["."]

[tool.poetry]
name = "environmental_insights"
version = "0.2.1b0"
description = "A Python package for democratizing access to ambient air pollution data and predictive analytics."
authors = ["Liam J. Berrisford <l.berrisford@exeter.ac.uk>"]
license = "GPL-3.0-or-later"
keywords = ["air pollution", "predictive analytics", "environmental data", "geospatial analysis"]
readme = "README.md"
packages = [
    { include = "environmental_insights" }  # Adjust this if your package directory has a different name
]

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "*"
lightgbm = "*"
matplotlib = "*"
overpy = "*"
pandas = "*"
pyarrow = "*"
pyogrio = "*"
requests = "*"
rpy2 = "*"
scipy = "*"
shapely = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2"



