[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["."]

[tool.poetry]
name = "environmental_insights"
version = "0.2.1b0"
description = "A Python package for democratizing access to ambient air pollution data and predictive analytics."
authors = ["Liam J. Berrisford <l.berrisford@exeter.ac.uk>"]
license = "GPL-3.0-or-later"
keywords = ["air pollution", "predictive analytics", "environmental data", "geospatial analysis"]
readme = "README.md"
packages = [
    { include = "environmental_insights" }  # Adjust this if your package directory has a different name
]

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.1"
lightgbm = "*"
matplotlib = "*"
overpy = "*"
pandas = "*"
pyarrow = "*"
pyogrio = "*"
requests = "*"
scipy = "*"
shapely = "*"
jupyterlab = "^4.4.2"
xarray = "^2025.4.0"
netcdf4 = "^1.7.2"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*shapely\\.geos.*:DeprecationWarning",
    "ignore:numpy.ndarray size changed.*:RuntimeWarning"
]


